Agregando Scalar docs api v1
